--- a/.env_template
+++ b/.env_template
@@ -1,2 +1,6 @@
-SECRET_KEY=IncludeYourSecretKeyHere
-DEBUG=True
+SECRET_KEY=
+DEBUG=
+DATABASE_URL=
+ALLOWED_HOSTS=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
